--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
           <input type="text" class="form-control col-lg-8" placeholder="Search">
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/contact.html">Contact Me</a></li>
+          <li><a href="/octoren/contact.html">Contact Me</a></li>
         </ul>
       </div>
     </div>
