--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <input type="text" class="form-control col-lg-8" placeholder="Search">
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/contact.html">Contact Me</a></li>
+          <li><a href="/octoren/contact.html">Contact Me</a></li>
         </ul>
       </div>
     </div>
@@ -39,7 +39,7 @@
     <div class="box main col-lg-12">
       <div class="jumbotron">
         <h1>Welcome!</h1>
-        <p>This site is under construction. Leave me a <a href="/contact.html">message</a>, or visit my <a href="http://www.about.me/renusrinivasan">about.me page</a> in the meanwhile!</p>
+        <p>This site is under construction. Leave me a <a href="/octoren/contact.html">message</a>, or visit my <a href="http://www.about.me/renusrinivasan">about.me page</a> in the meanwhile!</p>
       </div>
     </div>
 
